Markup FD-BHERE1

--- a/dos33.html
+++ b/dos33.html
@@ -5858,7 +5858,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     234             FIN                                             ; Patch incomplete! Where is the <span class='code'>RTS</span>??? Called from <a class='x' href='#SCNCMD'>SCNCMD</a>
                     235             SKP 1
     =CF             236 <a class='d' id='36B3' coords='74' name='BHERE1'>BHERE1      </a>EQU &gt;*
-36CF:00             237             DS $FD-BHERE1,0                                 ;[.. <a class='mem' name='_36B3' coords='46'>wastes</a> 46 bytes ($36FD - $36CF = $2E)
+36CF:00             237             DS $<span class='n'>FD</a>-<a href='BHERE1'>BHERE1</a>,0                                 ;[.. <a class='mem' name='_36B3' coords='46'>wastes</a> 46 bytes ($36FD - $36CF = $2E)
                                                                                     ; .. ; === DOS 3.3A JAN 1980 <a class='f' id='36D0'>EASTER EGG</a> === secret message @ 36D0 ($B6D0): "B01-00"
 36D0:00 00 00 00                                                                    ; .. <span class='macro'>               PRBYTE  EQU $FDDA    </span> Print A as 2 hex digits</span>
 36D4:00 00 00 00                                                                    ; .. <span class='macro'>36D0:20 58 FC          JSR HOME     </span>
