--- a/dos33.html
+++ b/dos33.html
@@ -6906,18 +6906,18 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 3A3E:BA BB BC       080             DFB $BA,$BB,$BC
 3A41:BD BE BF       081             DFB $BD,$BE,$BF
 3A44:CB CD CE       082             DFB $CB,$CD,$CE
-3A47:               083             DFB $CF,$D3,$D6
-                    084             DFB $D7,$D9,$DA
-                    085             DFB $DB,$DC,$DD
-                    086             DFB $DE,$DF,$E5
-                    087             DFB $E6,$E7,$E9
-                    088             DFB $EA,$EB,$EC
-                    089             DFB $ED,$EE,$EF
-                    090             DFB $F2,$F3,$F4
-                    091             DFB $F5,$F6,$F7
-                    092             DFB $F9,$FA,$FB
-                    093             DFB $FC,$FD,$FE
-                    094             DFB $FF
+3A47:CF D3 D6       083             DFB $CF,$D3,$D6
+3A4A:D7 D9 DA       084             DFB $D7,$D9,$DA
+3A4D:DB DC DD       085             DFB $DB,$DC,$DD
+3A50:DE DF E5       086             DFB $DE,$DF,$E5
+3A53:E6 E7 E9       087             DFB $E6,$E7,$E9
+3A56:EA EB EC       088             DFB $EA,$EB,$EC
+3A59:ED EE EF       089             DFB $ED,$EE,$EF
+3A5C:F2 F3 F4       090             DFB $F2,$F3,$F4
+3A5F:F5 F6 F7       091             DFB $F5,$F6,$F7
+3A62:F9 FA FB       092             DFB $F9,$FA,$FB
+3A65:FC FD FE       093             DFB $FC,$FD,$FE
+3A68:FF             094             DFB $FF
                     095             PAGE
                     096 ***************************
                     097 *      7-BIT TO 6-BIT     *
